Use GDOC framework. Cleanup DocBook targets.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -20,77 +20,30 @@
 
 SUBDIRS = reference
 
-gsasl_texi_auto_deps = gsasl-api-version.texi gsasl-api-global.texi \
-	gsasl-api-session.texi gsasl-api-callback.texi gsasl-api-utils.texi \
-	gsasl-api-error.texi gsasl-api-error-labels.texi
-
-# gsasl.xml gsasl-db.txt gsasl-db.html gsasl-db.ps gsasl-db.pdf
-
 EXTRA_DIST = gdoc gdoc-error gsasl-example1.c \
-	gsasl.html gsasl.ps gsasl.pdf $(gsasl_texi_auto_deps) \
+	gsasl.html gsasl.ps gsasl.pdf \
+	$(gsasl_html_auto_deps) \
 	doxygen/Doxyfile.in doxygen/gdoc2doxygen
+
+#	gsasl-db.xml gsasl-db.txt gsasl-db.ps gsasl-db.pdf
 
 info_TEXINFOS = gsasl.texi
 ps_TEXINFOS = gsasl.texi
 pdf_TEXINFOS = gsasl.texi
-gsasl_TEXINFOS = gpl.texi fdl.texi $(gsasl_texi_auto_deps) $(gdoc_TEXINFOS) \
+gsasl_TEXINFOS = gpl.texi fdl.texi $(gdoc_TEXINFOS) \
 	gsasl-callback-password.texi gsasl-callback-authorization.texi \
 	gsasl-callback-authentication.texi gsasl-callback-validate.texi \
 	gsasl-callback-retrieve.texi gsasl-callback-cram-md5.texi \
 	gsasl-callback-digest-md5.texi gsasl-callback-passcode.texi \
 	gsasl-callback-gssapi.texi gsasl-callback-securid.texi \
-	gsasl-callback-client-service.texi gsasl-callback-server-service.texi
+	gsasl-callback-client-service.texi gsasl-callback-server-service.texi \
+	gsasl-api-error-labels.texi
 
-gsasl_api_version_deps = $(top_srcdir)/lib/version.c
-
-gsasl_api_global_deps = $(top_srcdir)/lib/init.c \
-			$(top_srcdir)/lib/done.c \
-			$(top_srcdir)/lib/listmech.c \
-			$(top_srcdir)/lib/supportp.c \
-			$(top_srcdir)/lib/suggest.c
-
-gsasl_api_callback_deps = $(top_srcdir)/lib/callback.c \
-			$(top_srcdir)/lib/callback-s.c \
-			$(top_srcdir)/lib/callback-c.c
-
-gsasl_api_session_deps = $(top_srcdir)/lib/xstart.c \
-			$(top_srcdir)/lib/xstep.c \
-			$(top_srcdir)/lib/xfinish.c \
-			$(top_srcdir)/lib/xcode.c
-
-gsasl_api_utils_deps = $(top_srcdir)/lib/stringprep.c \
-			$(top_srcdir)/lib/base64.c \
-			$(top_srcdir)/lib/hexdump.c \
-			$(top_srcdir)/lib/md5pwd.c
-
-gsasl_api_error_deps = $(top_srcdir)/lib/error.c
-
-gsasl_api_error_label_deps = $(gsasl_api_error_deps)
-
-gsasl-api-global.texi: $(gsasl_api_global_deps)
-	$(PERL) $(srcdir)/gdoc -texinfo $^ > $@
-
-gsasl-api-version.texi: $(gsasl_api_version_deps)
-	$(PERL) $(srcdir)/gdoc -texinfo $^ > $@
-
-gsasl-api-session.texi: $(gsasl_api_session_deps)
-	$(PERL) $(srcdir)/gdoc -texinfo $^ > $@
-
-gsasl-api-callback.texi: $(gsasl_api_callback_deps)
-	$(PERL) $(srcdir)/gdoc -texinfo $^ > $@
-
-gsasl-api-utils.texi: $(gsasl_api_utils_deps)
-	$(PERL) $(srcdir)/gdoc -texinfo $^ > $@
-
-gsasl-api-error.texi: $(gsasl_api_error_deps)
-	$(PERL) $(srcdir)/gdoc -texinfo $^ > $@
-
-gsasl-api-error-labels.texi: $(gsasl_api_error_label_deps)
+gsasl-api-error-labels.texi: $(top_srcdir)/lib/error.c
 	$(PERL) $(srcdir)/gdoc-error $^ > $@
 
-gsasl.html: gsasl.texi
-	$(MAKEINFO) --html --no-split --number-sections $<
-#	$(TEXI2HTML) -nosec_nav $<
+gsasl.html: gsasl.texi $(gsasl_TEXINFOS)
+	$(MAKEINFO) --html --no-split --number-sections gsasl.texi
 
 dist_man_MANS = gsasl.1 $(gdoc_MANS)
 DISTCLEANFILES = $(dist_man_MANS)
@@ -109,43 +62,35 @@ GDOC_MAN_EXTRA_ARGS = -module $(PACKAGE) -sourceversion $(VERSION) \
 	-copyright "2002, 2003 Simon Josefsson" -verbatimcopying
 include $(srcdir)/Makefile.gdoci
 
-# Docbook:
+# DocBook
 
-gsasl.xml: gsasl.texi
-	$(MAKEINFO) --docbook $<
+gsasl_html_auto_deps = html/a1563.html html/a1686.html			\
+	html/c1176.html html/c1201.html html/c1211.html			\
+	html/c1214.html html/c1219.html html/c1224.html			\
+	html/c1229.html html/c1308.html html/c16.html html/c261.html	\
+	html/c364.html html/c541.html html/c803.html html/c9.html	\
+	html/c917.html html/i1313.html html/i1444.html html/index.html	\
+	html/x1052.html html/x1099.html html/x1186.html			\
+	html/x1191.html html/x1196.html html/x1272.html			\
+	html/x1671.html html/x1789.html html/x179.html html/x195.html	\
+	html/x214.html html/x232.html html/x29.html html/x297.html	\
+	html/x300.html html/x319.html html/x345.html html/x376.html	\
+	html/x45.html html/x456.html html/x490.html html/x553.html	\
+	html/x558.html html/x611.html html/x625.html html/x740.html	\
+	html/x815.html html/x835.html html/x842.html html/x929.html	\
+	html/x976.html html/x988.html html/x995.html
 
-gsasl-db.txt: gsasl.xml
-	mkdir db.tmp && \
-	cp $< db.tmp && \
-	cd db.tmp && \
-	$(DOCBOOK2TXT) --nochunks $< && \
-	cd .. && \
-	mv db.tmp/gsasl.txt gsasl-db.txt && \
-	rm -rf db.tmp
+gsasl-db.xml: gsasl.texi $(gsasl_TEXINFOS)
+	$(MAKEINFO) --docbook --output $@ gsasl.texi
 
-gsasl-db.html: gsasl.xml
-	mkdir db.tmp && \
-	cp $< db.tmp && \
-	cd db.tmp && \
-	$(DOCBOOK2HTML) --nochunks $< && \
-	cd .. && \
-	mv db.tmp/gsasl.html gsasl-db.html && \
-	rm -rf db.tmp
+$(gsasl_html_auto_deps): gsasl-db.xml
+	$(DOCBOOK2HTML) -o html $^
 
-gsasl-db.ps: gsasl.xml
-	mkdir db.tmp && \
-	cp $< db.tmp && \
-	cd db.tmp && \
-	$(DOCBOOK2PS) $< && \
-	cd .. && \
-	mv db.tmp/gsasl.ps gsasl-db.ps && \
-	rm -rf db.tmp
+gsasl-db.txt: gsasl-db.xml
+	$(DOCBOOK2TXT) $^
 
-gsasl-db.pdf: gsasl.xml
-	mkdir db.tmp && \
-	cp $< db.tmp && \
-	cd db.tmp && \
-	$(DOCBOOK2PDF) $< && \
-	cd .. && \
-	mv db.tmp/gsasl.pdf gsasl-db.pdf && \
-	rm -rf db.tmp
+gsasl-db.pdf: gsasl-db.xml
+	$(DOCBOOK2PDF) $^
+
+gsasl-db.ps: gsasl-db.xml
+	$(DOCBOOK2PS) $^
