Don't build doc/man/Makefile.

--- a/configure.ac
+++ b/configure.ac
@@ -428,8 +428,7 @@ AM_CONDITIONAL(ENABLE_GTK_DOC, test x$enable_gtk_doc = xyes)
 # We are done
 AC_CONFIG_FILES(Makefile libgsasl.pc po/Makefile.in m4/Makefile \
 		gl/Makefile gl/m4/Makefile crypto/Makefile \
-		doc/Makefile doc/reference/Makefile doc/man/Makefile \
-		doc/doxygen/Doxyfile \
+		doc/Makefile doc/reference/Makefile doc/doxygen/Doxyfile \
 		lib/Makefile lib/gsasl.h \
 		src/Makefile tests/Makefile)
 AC_OUTPUT
