*** empty log message ***

--- a/doc/reference/.cvsignore
+++ b/doc/reference/.cvsignore
@@ -1,20 +1,22 @@
 Makefile
 Makefile.in
+c4.html
 gsasl-decl-list.txt
 gsasl-decl.txt
+gsasl-doc.bottom
+gsasl-doc.top
+gsasl-gsasl.html
 gsasl-sections.txt
 gsasl-undocumented.txt
+gsasl-unused.sgml
 gsasl-unused.txt
-gsasl.args
-gsasl.hierarchy
-gsasl.signals
-html
-html-build.stamp
-html.stamp
-scan-build.stamp
-sgml
-sgml-build.stamp
+gsasl.sgml
+home.png
+index.html
+index.sgml
+left.png
+right.png
+scan.stamp
 sgml.stamp
-tmpl
-tmpl-build.stamp
 tmpl.stamp
+up.png
