Use *_CPPFLAGS instead of obsolete INCLUDES.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,11 +18,10 @@
 # the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 
-INCLUDES = -I../lib -I$(top_srcdir)/gl
-
 bin_PROGRAMS = gsasl
 
 gsasl_SOURCES = gsasl.c callbacks.h callbacks.c internal.h
+gsasl_CPPFLAGS = -I../lib -I$(top_srcdir)/gl
 gsasl_LDADD = ../lib/libgsasl.la ../gl/libfoo.la
 
 localedir = $(datadir)/locale
