--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -21,14 +21,14 @@
 lib_LTLIBRARIES = libgsasl.la
 
 DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
-INCLUDES = @LIBNTLM_CFLAGS@ @LIBGCRYPT_CFLAGS@ @CRYPTO_CFLAGS@ @LIBNTLM_CFLAGS@ \
-	@GSSAPI_CFLAGS@ @GSS_CFLAGS@ @SHISHI_CFLAGS@
 
 include_HEADERS = gsasl.h
 
+libgsasl_la_CPPFLAGS = @LIBNTLM_CFLAGS@ @LIBGCRYPT_CFLAGS@ @CRYPTO_CFLAGS@ \
+	@LIBNTLM_CFLAGS@ @GSSAPI_CFLAGS@ @GSS_CFLAGS@ @SHISHI_CFLAGS@
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
-libgsasl_la_LIBADD = @LTLIBINTL@ @LIBGCRYPT_LIBS@ @CRYPTO_LIBS@ @LIBNTLM_LIBS@ \
-	@GSSAPI_LIBS@ @GSS_LIBS@ @SHISHI_LIBS@
+libgsasl_la_LIBADD = @LTLIBINTL@ @LIBGCRYPT_LIBS@ @CRYPTO_LIBS@ \
+	@LIBNTLM_LIBS@ @GSSAPI_LIBS@ @GSS_LIBS@ @SHISHI_LIBS@
 libgsasl_la_SOURCES = gsasl.h.in internal.h gettext.h \
 	init.c done.c error.c version.c callback.c common.c \
 	supportp.c suggest.c listmech.c \
