Update gnulib section.

--- a/configure.ac
+++ b/configure.ac
@@ -366,12 +366,13 @@ gl_FUNC_ALLOCA
 gl_ARGP
 gl_ERROR
 gl_EXITFAIL
-AM_FUNC_GETLINE
 gl_GETOPT
 jm_FUNC_MALLOC
 gl_FUNC_MEMPCPY
 jm_FUNC_REALLOC
 gl_C_RESTRICT
+AM_STDBOOL_H
+gl_STRCASE
 gl_FUNC_STRCHRNUL
 gl_FUNC_STRNDUP
 gl_FUNC_STRNLEN
