Use AM_CPPFLAGS instead of target_CPPFLAGS.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -20,12 +20,12 @@
 
 lib_LTLIBRARIES = libgsasl.la
 
+AM_CPPFLAGS = @LIBNTLM_CFLAGS@ @LIBGCRYPT_CFLAGS@ @CRYPTO_CFLAGS@ \
+	@LIBNTLM_CFLAGS@ @GSSAPI_CFLAGS@ @GSS_CFLAGS@ @SHISHI_CFLAGS@
 DEFS = -DLOCALEDIR=\"$(datadir)/locale\" @DEFS@
 
 include_HEADERS = gsasl.h
 
-libgsasl_la_CPPFLAGS = @LIBNTLM_CFLAGS@ @LIBGCRYPT_CFLAGS@ @CRYPTO_CFLAGS@ \
-	@LIBNTLM_CFLAGS@ @GSSAPI_CFLAGS@ @GSS_CFLAGS@ @SHISHI_CFLAGS@
 libgsasl_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 libgsasl_la_LIBADD = @LTLIBINTL@ @LIBGCRYPT_LIBS@ @CRYPTO_LIBS@ \
 	@LIBNTLM_LIBS@ @GSSAPI_LIBS@ @GSS_LIBS@ @SHISHI_LIBS@
