--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -178,13 +178,12 @@ extern "C"
 /* Error handling: error.c */
   extern const char *gsasl_strerror (int err);
 
-/* Utilities: base64.c, hexdump.c, md5pwd.c */
+/* Utilities: base64.c, md5pwd.c */
   extern int gsasl_base64_encode (char const *src,
 				  size_t srclength,
 				  char *target, size_t targsize);
   extern int gsasl_base64_decode (char const *src,
 				  char *target, size_t targsize);
-  extern void gsasl_hexdump (FILE * fh, const char *buffer, size_t len);
   extern int gsasl_md5pwd_get_password (const char *filename,
 					const char *username,
 					char *key, size_t * keylen);
