Reorder error codes. Rename GSASL_SHISHI_ERROR to GSASL_KERBEROS_V5_INTERNAL_ERROR (but keep alias for a while).

--- a/lib/gsasl.h.in
+++ b/lib/gsasl.h.in
@@ -58,17 +58,6 @@ extern "C"
     GSASL_BASE64_ERROR,
     GSASL_CRYPTO_ERROR,
     GSASL_GCRYPT_ERROR = GSASL_CRYPTO_ERROR,
-    GSASL_GSSAPI_RELEASE_BUFFER_ERROR,
-    GSASL_GSSAPI_IMPORT_NAME_ERROR,
-    GSASL_GSSAPI_INIT_SEC_CONTEXT_ERROR,
-    GSASL_GSSAPI_ACCEPT_SEC_CONTEXT_ERROR,
-    GSASL_GSSAPI_UNWRAP_ERROR,
-    GSASL_GSSAPI_WRAP_ERROR,
-    GSASL_GSSAPI_ACQUIRE_CRED_ERROR,
-    GSASL_GSSAPI_DISPLAY_NAME_ERROR,
-    GSASL_GSSAPI_UNSUPPORTED_PROTECTION_ERROR,
-    GSASL_KERBEROS_V5_INIT_ERROR,
-    GSASL_SHISHI_ERROR,
     GSASL_NEED_CLIENT_ANONYMOUS_CALLBACK,
     GSASL_NEED_CLIENT_PASSWORD_CALLBACK,
     GSASL_NEED_CLIENT_PASSCODE_CALLBACK,
@@ -86,8 +75,6 @@ extern "C"
     GSASL_NEED_SERVER_SERVICE_CALLBACK,
     GSASL_NEED_SERVER_GSSAPI_CALLBACK,
     GSASL_NEED_SERVER_RETRIEVE_CALLBACK,
-    GSASL_SECURID_SERVER_NEED_ADDITIONAL_PASSCODE,
-    GSASL_SECURID_SERVER_NEED_NEW_PIN,
     GSASL_UNICODE_NORMALIZATION_ERROR,
     GSASL_MECHANISM_PARSE_ERROR,
     GSASL_AUTHENTICATION_ERROR,
@@ -95,7 +82,22 @@ extern "C"
     GSASL_INTEGRITY_ERROR,
     GSASL_NO_MORE_REALMS,
     GSASL_NO_CLIENT_CODE,
-    GSASL_NO_SERVER_CODE
+    GSASL_NO_SERVER_CODE,
+    /* Mechanism specific errors. */
+    GSASL_GSSAPI_RELEASE_BUFFER_ERROR,
+    GSASL_GSSAPI_IMPORT_NAME_ERROR,
+    GSASL_GSSAPI_INIT_SEC_CONTEXT_ERROR,
+    GSASL_GSSAPI_ACCEPT_SEC_CONTEXT_ERROR,
+    GSASL_GSSAPI_UNWRAP_ERROR,
+    GSASL_GSSAPI_WRAP_ERROR,
+    GSASL_GSSAPI_ACQUIRE_CRED_ERROR,
+    GSASL_GSSAPI_DISPLAY_NAME_ERROR,
+    GSASL_GSSAPI_UNSUPPORTED_PROTECTION_ERROR,
+    GSASL_KERBEROS_V5_INIT_ERROR,
+    GSASL_KERBEROS_V5_INTERNAL_ERROR,
+    GSASL_SHISHI_ERROR = GSASL_KERBEROS_V5_INTERNAL_ERROR,
+    GSASL_SECURID_SERVER_NEED_ADDITIONAL_PASSCODE,
+    GSASL_SECURID_SERVER_NEED_NEW_PIN
   } Gsasl_rc;
 
 /* Quality of Protection types, used by DIGEST-MD5 */
