--- a/crypto/Makefile.am
+++ b/crypto/Makefile.am
@@ -24,5 +24,5 @@ noinst_LTLIBRARIES = libnettle.la
 
 libnettle_la_SOURCES = macros.h nettle-meta.h \
 	memxor.c memxor.h \
-	md5.h md5.c \
+	md5.h md5.c md5-meta.c \
 	hmac.c hmac.h hmac-md5.c
